Fixed sideways scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,11 @@
 
 html {
   font-size: 16px;
+}
+
+html, body {
   overflow-x: hidden;
+  max-width: 100vw;
 }
 
 path {
